# zenoh_audio_cpp

./: .gitignore  README.md
cpp/: Makefile  record_audio  record_audio.cpp  recording.flac
cpp/audio_zenoh_cpp/: README.md
cpp/audio_zenoh_cpp/audio_pub/: CMakeLists.txt  config.cfg
cpp/audio_zenoh_cpp/audio_pub/include/: recorder.hpp
cpp/audio_zenoh_cpp/audio_pub/src/: main.cpp  recorder.cpp
cpp/audio_zenoh_cpp/audio_sub/: audio_sub.py  capture.flac
cpp/audio_zenoh_cpp/audio_sub/player/: CMakeLists.txt  README.md  config.cfg
cpp/audio_zenoh_cpp/audio_sub/player/src/: main.cpp
